# CI312-opengl

./: CMakeLists.txt
common/: CMakeCache.txt  cmake_install.cmake  controls.cpp  controls.hpp  objloader.cpp  objloader.hpp  shaders.cpp  shaders.hpp  text2D.cpp
common/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelWithDebInfo
common/GLTutorials.xcodeproj/: project.pbxproj
source/example1/: SimpleFragmentShader.hlsl  SimpleVertexShader.hlsl  example1.cpp
